[gd_scene load_steps=2 format=3 uid="uid://dassfvqra788a"]

[ext_resource type="Script" uid="uid://vy8827pxrjgn" path="res://scenes/default/vector_placer.gd" id="1_h6osu"]

[node name="VectorPlacer" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4878.0
offset_top = -4477.0
offset_right = 5122.0
offset_bottom = 5523.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00044, 1.00787)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_h6osu")
level = 1

[node name="MouseFollower" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -50.0
offset_right = 250.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
theme_override_font_sizes/normal_font_size = 16
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NamePopup" type="Window" parent="VBoxContainer"]
auto_translate_mode = 1
title = "\"C\" to Cancel \"S\" to Save"
position = Vector2i(0, 36)
size = Vector2i(250, 100)
visible = false

[node name="Control" type="Control" parent="VBoxContainer/NamePopup"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 50.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/NamePopup/Control"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 1
offset_right = 200.0
offset_bottom = 104.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/NamePopup/Control/VBoxContainer"]
custom_minimum_size = Vector2(250, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="SaveButton" type="Button" parent="VBoxContainer/NamePopup/Control/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2

[node name="Text" type="RichTextLabel" parent="VBoxContainer/NamePopup/Control/VBoxContainer/SaveButton"]
custom_minimum_size = Vector2(250, 48)
layout_mode = 1
offset_right = 200.0
offset_bottom = 15.0
text = "Save"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="close_requested" from="VBoxContainer/NamePopup" to="." method="_on_name_popup_close_requested"]
[connection signal="text_submitted" from="VBoxContainer/NamePopup/Control/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
